--- a/PasswordValidator.html
+++ b/PasswordValidator.html
@@ -7,9 +7,16 @@
 	</head>
 	
 	<body>
-		<form action="validate()">
+		<form action="validate()" method="post" >
 			Password:
 			<br>
-			<input type="text" id="passOne" >
+			<input type="text" id="passOne" name="first">
+			<br>
 			Re-enter password:
 			<br>
+			<input type="text" id="passTwo" name="second">
+			<br>
+			<input type="submit">
+		</form>
+	</body>
+</html>
