Figure out how to retrieve submission box data via .value function

--- a/PasswordValidator.html
+++ b/PasswordValidator.html
@@ -16,7 +16,7 @@
 			<br>
 			<input type="text" id="passTwo" name="second">
 			<br>
-			<input type="submit">
+			<button type="button" onclick="validate()"> Submit </button>
 		</form>
 	</body>
 </html>
