--- a/PasswordValidator.html
+++ b/PasswordValidator.html
@@ -18,5 +18,7 @@
 			<br>
 			<button type="button" onclick="validate()"> Submit </button>
 		</form>
+		
+		<img src="happy_retriever.jpg" id="soHappy" alt="look how happy he is" style="visibility:hidden"></img>
 	</body>
 </html>
