--- a/PasswordValidation/PasswordValidator.html
+++ b/PasswordValidation/PasswordValidator.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
 	<head>
 		<title> Identify yourself </title>
 		<script type="text/javascript"
@@ -10,11 +11,11 @@
 		<form action="validate()" method="post" >
 			Password:
 			<br>
-			<input type="text" id="passOne" name="first">
+			<input type="password" id="passOne" name="first">
 			<br>
 			Re-enter password:
 			<br>
-			<input type="text" id="passTwo" name="second">
+			<input type="password" id="passTwo" name="second">
 			<br>
 			<button type="button" onclick="validate()"> Submit </button>
 		</form>
