Add pictures, set to invisible for now until better solution found.

--- a/PasswordValidation/PasswordValidator.html
+++ b/PasswordValidation/PasswordValidator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
+		<meta charset=utf-8>
 		<title> Identify yourself </title>
 		<script type="text/javascript"
 				src="PassVal.js">
@@ -20,6 +21,6 @@
 			<button type="button" onclick="validate()"> Submit </button>
 		</form>
 		
-		<img src="happy_retriever.jpg" id="soHappy" alt="look how happy he is" style="visibility:hidden"></img>
+		<img src="happy_retriever.jpg" id="soHappy" alt="look how happy he is" style="visibility:hidden">
 	</body>
 </html>
