--- a/SlideShow/SlideShow.html
+++ b/SlideShow/SlideShow.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
 	<head>
 		<title> For Your Viewing Pleasure </title>
 		<script type="text/javascript"
@@ -8,5 +9,11 @@
 	
 	<body>
 		<button type="button" onclick="increment()" > NEXT </button>
+		<button type="button" onclick="decrement()" > PREVIOUS </button>
+		<img src="sunrise1.jpg" id="image1" style="visibility:hidden" width="100%">
+		<img src="sunrise2.jpg" id="image2" style="visibility:hidden" width="100%">
+		<img src="sunrise3.jpg" id="image3" style="visibility:hidden" width="100%">
+		<img src="sunrise4.jpg" id="image4" style="visibility:hidden" width="100%">
+		<img src="sunrise5.jpg" id="image5" style="visibility:hidden" width="100%">
 	</body>
 </html>
