--- a/SlideShow/SlideShow.html
+++ b/SlideShow/SlideShow.html
@@ -8,12 +8,17 @@
 	</head>
 	
 	<body>
-		<button type="button" onclick="increment()" > NEXT </button>
 		<button type="button" onclick="decrement()" > PREVIOUS </button>
-		<img src="sunrise1.jpg" id="image1" style="visibility:hidden" width="100%">
-		<img src="sunrise2.jpg" id="image2" style="visibility:hidden" width="100%">
-		<img src="sunrise3.jpg" id="image3" style="visibility:hidden" width="100%">
-		<img src="sunrise4.jpg" id="image4" style="visibility:hidden" width="100%">
-		<img src="sunrise5.jpg" id="image5" style="visibility:hidden" width="100%">
+		<button type="button" onclick="increment()" > NEXT</button>
+		<br>
+		<img src="sunrise1.jpg" id="image0" width="100" height="100" >
+		
+		<img src="sunrise2.jpg" id="image1" width="100" height="100">
+		
+		<img src="sunrise3.jpg" id="image2" width="500" height="500">
+		
+		<img src="sunrise4.jpg" id="image3" width="100" height="100">
+		
+		<img src="sunrise5.jpg" id="image4" width="100" height="100">
 	</body>
 </html>
