--- a/SlideShow/SlideShow.html
+++ b/SlideShow/SlideShow.html
@@ -7,18 +7,18 @@
 		</script>
 	</head>
 	
-	<body>
+	<body onload="initialize()">
 		<button type="button" onclick="decrement()" > PREVIOUS </button>
 		<button type="button" onclick="increment()" > NEXT</button>
 		<br>
-		<img src="sunrise1.jpg" id="image0" width="100" height="100" >
+		<img src="sunrise1.jpg" id="image0" width="0" height="0" >
 		
-		<img src="sunrise2.jpg" id="image1" width="100" height="100">
+		<img src="sunrise2.jpg" id="image1" width="0" height="0">
 		
 		<img src="sunrise3.jpg" id="image2" width="500" height="500">
 		
-		<img src="sunrise4.jpg" id="image3" width="100" height="100">
+		<img src="sunrise4.jpg" id="image3" width="0" height="0">
 		
-		<img src="sunrise5.jpg" id="image4" width="100" height="100">
+		<img src="sunrise5.jpg" id="image4" width="0" height="0">
 	</body>
 </html>
