Rough implementation of the personal profile, working on the CSS classes, and some filler text to help with visualization of aforementioned classes.

--- a/PasswordValidation/PasswordValidator.html
+++ b/PasswordValidation/PasswordValidator.html
@@ -21,6 +21,6 @@
 			<button type="button" onclick="validate()"> Submit </button>
 		</form>
 		
-		<img src="happy_retriever.jpg" id="soHappy" alt="look how happy he is" style="visibility:hidden">
+		<img src="happy_retriever.jpg" id="soHappy" alt="Just imagine a dog is here." style="visibility:hidden">
 	</body>
 </html>
