--- a/SlideShow/SlideShow.html
+++ b/SlideShow/SlideShow.html
@@ -12,7 +12,7 @@
 		<button type="button" onclick="increment()" > NEXT</button>
 		<br>
 		
-		<img src="sunrise1.jpg" id="image" width="500" height="500">
+		<img src="sunrise1.jpg" id="image" alt="If there aren't sunrises here, then something went wrong." width="500" height="500">
 		
 	</body>
 </html>
