embed trial youtube video, make header text work

--- a/PersonalProfile/PersonalProfile.html
+++ b/PersonalProfile/PersonalProfile.html
@@ -7,12 +7,14 @@
 			type="text/css"/>
 	</head>
 	<body>
-		<p class="header"> John J. Russell </p>
+		<p class="Header"> John J. Russell </p>
 		<img src="me.jpg" width="200" height="200">
 		<p class="whiteLetters"> This is a stand-alone paragraph. Ipsum dolor lorem ipsum the square root of 4 is 2 the "AWPer" is a critical role
 								in Counter-Strike teams, wielding the horrifically-powerful "AWP". Other team roles include the "IGL" or "In-Game Leader",
 								the "rifler", the "entry-fragger", the "support", and the "lurk player."</p>
 		
 		<a href="http://wordreference.com"> Translation services away! </a>
+		<p class="whiteLetters"> videos ahoy</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Os-rupiVrvs" frameborder="0" allowfullscreen></iframe>
 	</body>
 </html>
