Finish part 3 (the profile), add new youtube video and more links, change filler text, make more text styling classes.

--- a/PersonalProfile/PersonalProfile.html
+++ b/PersonalProfile/PersonalProfile.html
@@ -7,14 +7,18 @@
 			type="text/css"/>
 	</head>
 	<body>
-		<p class="Header"> John J. Russell </p>
-		<img src="me.jpg" width="200" height="200">
-		<p class="whiteLetters"> This is a stand-alone paragraph. Ipsum dolor lorem ipsum the square root of 4 is 2 the "AWPer" is a critical role
-								in Counter-Strike teams, wielding the horrifically-powerful "AWP". Other team roles include the "IGL" or "In-Game Leader",
-								the "rifler", the "entry-fragger", the "support", and the "lurk player."</p>
+		<p class="Header"> <u>John J. Russell</u> </p>
+		<img src="me.jpg" width="250" height="250">
+		<p class="subHeader"> Description: </p>
+		<p class="whiteLetters"> I like cheap food, fast cars, and watching my life slip away.</p>
 		
-		<a href="http://wordreference.com"> Translation services away! </a>
-		<p class="whiteLetters"> videos ahoy</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/Os-rupiVrvs" frameborder="0" allowfullscreen></iframe>
+		<p class="subHeader"> Favored Websites: </p>
+		<a href="http://wordreference.com"> Translation website </a> <br>
+		<a href="http://www.reddit.com"> "Online content aggregator" a.k.a. "advanced time waster"</a> <br>
+		<a href="https://www.youtube.com"> Free videos, but you should already know about this. </a> <br>
+		<a href="https://xkcd.com/"> Popular web comic "XKCD" </a> <br>
+		
+		<p class="subHeader"> Now watch this video filmed in zero-G</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/LWGJA9i18Co" frameborder="0" allowfullscreen></iframe>		
 	</body>
 </html>
