Change background color to a much more pleasant grey for all pages.

--- a/CSSManipulation/ColorChanger.html
+++ b/CSSManipulation/ColorChanger.html
@@ -5,6 +5,9 @@
 		<script type="text/javascript"
 				src="ColCha.js">
 		</script>
+		<link href="ColorChangerStyle.css"
+			rel="stylesheet"
+			type="text/css"/>
 	</head>
 	<body>
 		<form action="apply()" method="post">
