--- a/PasswordValidation/PasswordValidator.html
+++ b/PasswordValidation/PasswordValidator.html
@@ -6,6 +6,9 @@
 		<script type="text/javascript"
 				src="PassVal.js">
 		</script>
+		<link href="PasswordValidatorStyle.css"
+			rel="stylesheet"
+			type="text/css"/>
 	</head>
 	
 	<body>
