--- a/SlideShow/SlideShow.html
+++ b/SlideShow/SlideShow.html
@@ -5,6 +5,9 @@
 		<script type="text/javascript"
 				src="SliShoNew.js">
 		</script>
+		<link href="SlideShowStyle.css"
+			rel="stylesheet"
+			type="text/css"/>
 	</head>
 	
 	<body>
