Add border width control, takes any number greater than or equal to zero. Border is alway solid and black.

--- a/CSSManipulation/ColorChanger.html
+++ b/CSSManipulation/ColorChanger.html
@@ -19,7 +19,7 @@
 			<input type="text" id="textCol2" name="tc2">
 			Blue: 
 			<input type="text" id="textCol3" name="tc3">
-			<br>
+			<br> <br>
 			Background Color (Also in RGB):
 			<br>
 			Red: 
@@ -28,11 +28,15 @@
 			<input type="text" id="backCol2" name="bc2">
 			Blue: 
 			<input type="text" id="backCol3" name="bc3">
+			<br> <br>
+			Border width:
 			<br>
-			<button type="button" onclick="apply()"> Apply Colors </button>
+			<input type="text" id="width" name="howWide">
+			<br> <br>
+			<button type="button" onclick="apply()"> Apply Settings </button>
 		</form>
 		
-		<p id="dummyText" >
+		<p id="dummyText">
 			&ensp;	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in neque vitae mauris pulvinar hendrerit 
 			id ut augue. Cras ac faucibus tortor, imperdiet convallis dolor. In in erat ac arcu pulvinar eleifend convallis 
 			non nisl. Nullam ac sem ante. Etiam et dolor eros. Vestibulum efficitur posuere mauris nec luctus. Maecenas 
