Changed profile layout and css

--- a/PersonalProfile/PersonalProfile.html
+++ b/PersonalProfile/PersonalProfile.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>The Life and Times of John J. Russell</title>
+		<title>The Life and Times of John J. Russell</title> 
 		<link href="PerPro.css"
 			rel="stylesheet"
 			type="text/css"/>
 	</head>
 	<body>
-		<p class="Header"> <u>John J. Russell</u> </p>
-		<img src="me.jpg" width="250" height="250">
-		<p class="subHeader"> Description: </p>
+		
+		<p class="Header"> John J. Russell</p> 
+		<br>
+		<br>
+		<img src="me.jpg" width="250" height="250"> 
+		<p class="subHeader"> Description: </p> 
 		<p class="whiteLetters"> I like cheap food, fast cars, and watching my life slip away.</p>
 		
 		<p class="subHeader"> Favored Websites: </p>
