minor word choice change

--- a/PersonalProfile/PersonalProfile.html
+++ b/PersonalProfile/PersonalProfile.html
@@ -13,7 +13,7 @@
 		<br>
 		<img src="me.jpg" width="250" height="250"> 
 		<p class="subHeader"> Description: </p> 
-		<p class="whiteLetters"> I like cheap food, fast cars, and watching my life slip away.</p>
+		<p class="whiteLetters"> I enjoy cheap food, fast cars, and watching my life slip away.</p>
 		
 		<p class="subHeader"> Favored Websites: </p>
 		<a href="http://wordreference.com"> Translation website </a> <br>
