Change a bit of text, a bit of background color for hyperlinks, etc.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 		<a href="http://people.eecs.ku.edu/~jjrussel/PersonalProfile/PersonalProfile">Part 3: Personal Profile</a>
 		<br>
 		<a href="http://people.eecs.ku.edu/~jjrussel/CSSManipulation/ColorChanger">Part 4: CSS Manipulation</a>
-		
+		<br>
+		<br>
+		<br>
+		<br>
+		<p>To be continued...</p>
 	</body>
 </html>
